[JSC] Fix ArithMin/ArithMax handling for double, and Int32 speculation https://bugs.webkit.org/show_bug.cgi?id=246422 rdar://101048572

Reviewed by Justin Michaud.

This patch fixes two issues: one is just a bug fix and one is a bit theoretical.

1. FTL ArithMin/ArithMax double case is skipping the first parameter accidentally. This patch fixes it.
2. DFG ArithMin/ArithMax Int32 case can OSR exit after clobbering first parameter's register, which can theoretically
   puts different output if type speculation failed in the second or later parameters.

* JSTests/stress/arith-min-max-multiple.js:
(test7):
(test8):
* Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:
* Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileArithMinOrMax):

Canonical link: https://commits.webkit.org/255465@main